--- a/ClassLibrary1/ClassLibrary1/ClassLibrary1.csproj
+++ b/ClassLibrary1/ClassLibrary1/ClassLibrary1.csproj
@@ -44,10 +44,14 @@
     <Compile Include="Entities\Portfolio.cs" />
     <Compile Include="Entities\Position.cs" />
     <Compile Include="Entities\Symbol.cs" />
+    <Compile Include="Enums\Roles.cs" />
+    <Compile Include="Enums\Symbols .cs" />
+    <Compile Include="Enums\TradeStatuses.cs" />
+    <Compile Include="Enums\TradeTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
-    <Compile Include="Entities\UserRole.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
