--- a/ClassLibrary1/ClassLibrary1/ClassLibrary1.csproj
+++ b/ClassLibrary1/ClassLibrary1/ClassLibrary1.csproj
@@ -54,19 +54,28 @@
     <Compile Include="Entities\Portfolio.cs" />
     <Compile Include="Entities\Position.cs" />
     <Compile Include="Entities\Symbol.cs" />
+    <Compile Include="Entities\View.cs" />
+    <Compile Include="Entities\ViewTemplate.cs" />
+    <Compile Include="Entities\ViewTemplateColumn.cs" />
+    <Compile Include="Enums\ColumnFormats.cs" />
+    <Compile Include="Enums\ColumnNames.cs" />
+    <Compile Include="Enums\DateFormats.cs" />
     <Compile Include="Enums\Roles.cs" />
+    <Compile Include="Enums\Sorting.cs" />
     <Compile Include="Enums\Symbols .cs" />
+    <Compile Include="Enums\TemplatePositions.cs" />
     <Compile Include="Enums\TradeStatuses.cs" />
     <Compile Include="Enums\TradeTypes.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\PortfolioRepository.cs" />
+    <Compile Include="Repositories\PositionRepository.cs" />
     <Compile Include="Repositories\SymbolRepository.cs" />
-    <Compile Include="Views\CustomerView1.cs" />
-    <Compile Include="Views\CustomerView2.cs" />
-    <Compile Include="Views\CustomerView3.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
