--- a/ClassLibrary1/ClassLibrary2/ClassLibrary2.csproj
+++ b/ClassLibrary1/ClassLibrary2/ClassLibrary2.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="EF\ApplicationContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\EFUnitOfWork.cs" />
     <Compile Include="Repositories\PortfolioRepository.cs" />
