--- a/ClassLibrary1/ClassLibrary2/DALEF.csproj
+++ b/ClassLibrary1/ClassLibrary2/DALEF.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5CC7B26B-6E20-477B-8DEA-082BE73F7F84}</ProjectGuid>
+    <ProjectGuid>{257C9A9D-5143-4752-8FD3-CF729DED20E3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>DALEF</RootNamespace>
+    <AssemblyName>DALEF</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,32 +49,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Customer.cs" />
-    <Compile Include="Entities\Portfolio.cs" />
-    <Compile Include="Entities\Position.cs" />
-    <Compile Include="Entities\Symbol.cs" />
-    <Compile Include="Entities\View.cs" />
-    <Compile Include="Entities\ViewTemplate.cs" />
-    <Compile Include="Entities\ViewTemplateColumn.cs" />
-    <Compile Include="Enums\ColumnFormats.cs" />
-    <Compile Include="Enums\ColumnNames.cs" />
-    <Compile Include="Enums\DateFormats.cs" />
-    <Compile Include="Enums\Roles.cs" />
-    <Compile Include="Enums\Sorting.cs" />
-    <Compile Include="Enums\Symbols .cs" />
-    <Compile Include="Enums\TemplatePositions.cs" />
-    <Compile Include="Enums\TradeStatuses.cs" />
-    <Compile Include="Enums\TradeTypes.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="EF\ApplicationContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\User.cs" />
+    <Compile Include="Repositories\CustomerRepository.cs" />
+    <Compile Include="Repositories\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\PortfolioRepository.cs" />
+    <Compile Include="Repositories\PositionRepository.cs" />
+    <Compile Include="Repositories\SymbolRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\DAL.csproj">
+      <Project>{5cc7b26b-6e20-477b-8dea-082be73f7f84}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
