--- a/ClassLibrary1/UnitTests/UnitTests.csproj
+++ b/ClassLibrary1/UnitTests/UnitTests.csproj
@@ -70,6 +70,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="PortfolioTests.cs" />
+    <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
