Make 30 unit tests

--- a/ClassLibrary1/UnitTests/UnitTests.csproj
+++ b/ClassLibrary1/UnitTests/UnitTests.csproj
@@ -69,6 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MyExpectedException.cs" />
     <Compile Include="PortfolioTests.cs" />
     <Compile Include="PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
