--- a/ClassLibrary1/ClassLibrary1/DAL.csproj
+++ b/ClassLibrary1/ClassLibrary1/DAL.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Enums\TemplatePositions.cs" />
     <Compile Include="Enums\TradeStatuses.cs" />
     <Compile Include="Enums\TradeTypes.cs" />
+    <Compile Include="Interfaces\ICustomerRepository.cs" />
     <Compile Include="Interfaces\IPortfolioRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
