--- a/ClassLibrary1/BLL/BLL.csproj
+++ b/ClassLibrary1/BLL/BLL.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Interfaces\ICalculationService.cs" />
     <Compile Include="Interfaces\IPortfolioService.cs" />
     <Compile Include="Interfaces\IPositionService.cs" />
+    <Compile Include="Interfaces\ISymbolService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Interfaces\IValidateService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Services\CalculationService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\PositionService.cs" />
+    <Compile Include="Services\SymbolService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\ValidateService.cs" />
   </ItemGroup>
