--- a/ClassLibrary1/PL/Web.config
+++ b/ClassLibrary1/PL/Web.config
@@ -15,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=ERMOLAEVM;Initial Catalog=InvestDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ERMOLAEVM;Initial Catalog=InvestDB;Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="test" connectionString="Data Source=ERMOLAEVM;Initial Catalog=InvestDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
