Make date information from View

--- a/ClassLibrary1/BLL/BLL.csproj
+++ b/ClassLibrary1/BLL/BLL.csproj
@@ -73,7 +73,6 @@
     <Compile Include="DTO\PortfolioDTO.cs" />
     <Compile Include="DTO\PositionDTO.cs" />
     <Compile Include="DTO\ProfileDTO.cs" />
-    <Compile Include="DTO\SymbolDTO.cs" />
     <Compile Include="DTO\SymbolViewDTO.cs" />
     <Compile Include="DTO\UserDTO.cs" />
     <Compile Include="DTO\ViewDTO.cs" />
@@ -85,8 +84,8 @@
     <Compile Include="Interfaces\ICalculationService.cs" />
     <Compile Include="Interfaces\IPortfolioService.cs" />
     <Compile Include="Interfaces\IPositionService.cs" />
-    <Compile Include="Interfaces\ISymbolService.cs" />
     <Compile Include="Interfaces\ISymbolViewService.cs" />
+    <Compile Include="Interfaces\ITradeSybolService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Interfaces\IValidateService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,8 +97,8 @@
     <Compile Include="Services\CalculationService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\PositionService.cs" />
-    <Compile Include="Services\SymbolService.cs" />
     <Compile Include="Services\SymbolViewService.cs" />
+    <Compile Include="Services\TradeSybolService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\ValidateService.cs" />
   </ItemGroup>
