--- a/ClassLibrary1/ClassLibrary2/DALEF.csproj
+++ b/ClassLibrary1/ClassLibrary2/DALEF.csproj
@@ -71,8 +71,8 @@
     <Compile Include="Repositories\PortfolioRepository.cs" />
     <Compile Include="Repositories\PositionRepository.cs" />
     <Compile Include="Repositories\ProfileRepository.cs" />
-    <Compile Include="Repositories\SymbolRepository.cs" />
     <Compile Include="Repositories\SymbolViewRepository.cs" />
+    <Compile Include="Repositories\TradeSybolRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
