--- a/ClassLibrary1/ClassLibrary1/DAL.csproj
+++ b/ClassLibrary1/ClassLibrary1/DAL.csproj
@@ -64,8 +64,8 @@
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="Entities\Portfolio.cs" />
     <Compile Include="Entities\Position.cs" />
-    <Compile Include="Entities\Symbol.cs" />
     <Compile Include="Entities\View.cs" />
+    <Compile Include="Entities\Views\TradeSybolView.cs" />
     <Compile Include="Entities\ViewTemplate.cs" />
     <Compile Include="Entities\ViewTemplateColumn.cs" />
     <Compile Include="Entities\Views\SymbolView.cs" />
@@ -83,8 +83,8 @@
     <Compile Include="Interfaces\IPositionRepository.cs" />
     <Compile Include="Interfaces\IProfileRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\ISymbolRepository.cs" />
     <Compile Include="Interfaces\ISymbolViewRepository.cs" />
+    <Compile Include="Interfaces\ITradeSybolRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
