--- a/ClassLibrary1/BLL/BLL.csproj
+++ b/ClassLibrary1/BLL/BLL.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Helpers\ValidationException.cs" />
     <Compile Include="Interfaces\ICalculationService.cs" />
+    <Compile Include="Interfaces\ICustomerService.cs" />
     <Compile Include="Interfaces\IPortfolioService.cs" />
     <Compile Include="Interfaces\IPositionService.cs" />
     <Compile Include="Interfaces\ISymbolViewService.cs" />
@@ -95,6 +96,7 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Compile Include="Services\CalculationService.cs" />
+    <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\PositionService.cs" />
     <Compile Include="Services\SymbolViewService.cs" />
