--- a/ClassLibrary1/UnitTests/UnitTests.csproj
+++ b/ClassLibrary1/UnitTests/UnitTests.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Tests\PortfolioTests.cs" />
     <Compile Include="Tests\PositionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\TradeSybolTests.cs" />
     <Compile Include="Tests\UserTests.cs" />
   </ItemGroup>
   <ItemGroup>
