Begin Introduce views..

--- a/ClassLibrary1/BLL/BLL.csproj
+++ b/ClassLibrary1/BLL/BLL.csproj
@@ -67,7 +67,9 @@
   <ItemGroup>
     <Compile Include="DTO\CustomerDTO.cs" />
     <Compile Include="DTO\DividendDTO.cs" />
+    <Compile Include="DTO\Enums\SortingDTO.cs" />
     <Compile Include="DTO\Enums\SymbolsDTO.cs" />
+    <Compile Include="DTO\Enums\TemplatePositionsDTO.cs" />
     <Compile Include="DTO\Enums\TradeStatusesDTO.cs" />
     <Compile Include="DTO\Enums\TradeTypesDTO.cs" />
     <Compile Include="DTO\PortfolioDTO.cs" />
@@ -89,6 +91,7 @@
     <Compile Include="Interfaces\ITradeSybolService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Interfaces\IValidateService.cs" />
+    <Compile Include="Interfaces\IViewTemplateService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -103,6 +106,7 @@
     <Compile Include="Services\TradeSybolService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\ValidateService.cs" />
+    <Compile Include="Services\ViewTemplateService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\DAL.csproj">
