--- a/ClassLibrary1/PL/PL.csproj
+++ b/ClassLibrary1/PL/PL.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\NavController.cs" />
     <Compile Include="Controllers\PortfolioController.cs" />
     <Compile Include="Controllers\PositionController.cs" />
+    <Compile Include="Controllers\ViewTemplateController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -222,6 +223,7 @@
     <Compile Include="Models\PortfolioModel.cs" />
     <Compile Include="Models\PositionModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\ViewTemplateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\AutofacConfig.cs" />
   </ItemGroup>
@@ -726,10 +728,12 @@
     <Content Include="Views\Error\Http500.cshtml" />
     <Content Include="Views\Error\Http404.cshtml" />
     <Content Include="Views\Error\ExhibitNotFound.cshtml" />
+    <Content Include="Views\Nav\ViewTemplateManagement.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Portfolio\" />
+    <Folder Include="Views\ViewTemplate\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
