--- a/ClassLibrary1/ClassLibrary2/DALEF.csproj
+++ b/ClassLibrary1/ClassLibrary2/DALEF.csproj
@@ -116,6 +116,10 @@
     <Compile Include="Migrations\201706011646398_sd.Designer.cs">
       <DependentUpon>201706011646398_sd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706020647388_asd.cs" />
+    <Compile Include="Migrations\201706020647388_asd.Designer.cs">
+      <DependentUpon>201706020647388_asd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
@@ -180,6 +184,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706011646398_sd.resx">
       <DependentUpon>201706011646398_sd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706020647388_asd.resx">
+      <DependentUpon>201706020647388_asd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
