--- a/ClassLibrary1/BLL/BLL.csproj
+++ b/ClassLibrary1/BLL/BLL.csproj
@@ -65,6 +65,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\ColumnDTO.cs" />
+    <Compile Include="DTO\ColumnFormatDTO.cs" />
     <Compile Include="DTO\CustomerDTO.cs" />
     <Compile Include="DTO\DividendDTO.cs" />
     <Compile Include="DTO\Enums\ColumnNamesDTO.cs" />
@@ -94,6 +96,7 @@
     <Compile Include="Interfaces\ITradeSybolService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Interfaces\IValidateService.cs" />
+    <Compile Include="Interfaces\IViewTemplateColumnService.cs" />
     <Compile Include="Interfaces\IViewTemplateService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource\Resource.Designer.cs">
@@ -109,6 +112,7 @@
     <Compile Include="Services\TradeSybolService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\ValidateService.cs" />
+    <Compile Include="Services\ViewTemplateColumnService.cs" />
     <Compile Include="Services\ViewTemplateService.cs" />
   </ItemGroup>
   <ItemGroup>
