--- a/ClassLibrary1/ClassLibrary1/DAL.csproj
+++ b/ClassLibrary1/ClassLibrary1/DAL.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="ApplicationManager\ApplicationRoleManager.cs" />
     <Compile Include="ApplicationManager\ApplicationUserManager.cs" />
+    <Compile Include="Entities\Column.cs" />
     <Compile Include="Entities\ColumnFormat.cs" />
     <Compile Include="Entities\Format.cs" />
     <Compile Include="Entities\Profile.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Enums\TemplatePositions.cs" />
     <Compile Include="Enums\TradeStatuses.cs" />
     <Compile Include="Enums\TradeTypes.cs" />
+    <Compile Include="Interfaces\IColumnRepository.cs" />
     <Compile Include="Interfaces\ICustomerRepository.cs" />
     <Compile Include="Interfaces\IPortfolioRepository.cs" />
     <Compile Include="Interfaces\IPositionRepository.cs" />
@@ -91,6 +93,7 @@
     <Compile Include="Interfaces\ISymbolViewRepository.cs" />
     <Compile Include="Interfaces\ITradeSybolRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Interfaces\IViewTemplateColumnRepository.cs" />
     <Compile Include="Interfaces\IViewTemplateRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
