--- a/ClassLibrary1/ClassLibrary2/DALEF.csproj
+++ b/ClassLibrary1/ClassLibrary2/DALEF.csproj
@@ -120,8 +120,21 @@
     <Compile Include="Migrations\201706020647388_asd.Designer.cs">
       <DependentUpon>201706020647388_asd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706050810454_s.cs" />
+    <Compile Include="Migrations\201706050810454_s.Designer.cs">
+      <DependentUpon>201706050810454_s.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706050813567_s2.cs" />
+    <Compile Include="Migrations\201706050813567_s2.Designer.cs">
+      <DependentUpon>201706050813567_s2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706051403085_s3.cs" />
+    <Compile Include="Migrations\201706051403085_s3.Designer.cs">
+      <DependentUpon>201706051403085_s3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ColumnRepository.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\EFUnitOfWork.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
@@ -131,6 +144,7 @@
     <Compile Include="Repositories\SymbolDividendRepository.cs" />
     <Compile Include="Repositories\SymbolViewRepository.cs" />
     <Compile Include="Repositories\TradeSybolRepository.cs" />
+    <Compile Include="Repositories\ViewTemplateColumnRepository.cs" />
     <Compile Include="Repositories\ViewTemplateRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -187,6 +201,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706020647388_asd.resx">
       <DependentUpon>201706020647388_asd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706050810454_s.resx">
+      <DependentUpon>201706050810454_s.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706050813567_s2.resx">
+      <DependentUpon>201706050813567_s2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706051403085_s3.resx">
+      <DependentUpon>201706051403085_s3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
