--- a/ClassLibrary1/PL/PL.csproj
+++ b/ClassLibrary1/PL/PL.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\NavController.cs" />
     <Compile Include="Controllers\PortfolioController.cs" />
     <Compile Include="Controllers\PositionController.cs" />
+    <Compile Include="Controllers\ViewTemplateColumnController.cs" />
     <Compile Include="Controllers\ViewTemplateController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -223,6 +224,7 @@
     <Compile Include="Models\PortfolioModel.cs" />
     <Compile Include="Models\PositionModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\ViewTemplateColumnModel.cs" />
     <Compile Include="Models\ViewTemplateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\AutofacConfig.cs" />
@@ -731,6 +733,9 @@
     <Content Include="Views\Nav\ViewTemplateManagement.cshtml" />
     <Content Include="Views\ViewTemplate\Save.cshtml" />
     <Content Include="Views\ViewTemplate\Delete.cshtml" />
+    <Content Include="Views\ViewTemplateColumn\RedactColumns.cshtml" />
+    <Content Include="Views\ViewTemplateColumn\Save.cshtml" />
+    <Content Include="Views\ViewTemplateColumn\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
