--- a/ClassLibrary1/ClassLibrary2/DALEF.csproj
+++ b/ClassLibrary1/ClassLibrary2/DALEF.csproj
@@ -132,11 +132,24 @@
     <Compile Include="Migrations\201706051403085_s3.Designer.cs">
       <DependentUpon>201706051403085_s3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706061130267_ss1.cs" />
+    <Compile Include="Migrations\201706061130267_ss1.Designer.cs">
+      <DependentUpon>201706061130267_ss1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706061147587_ss12.cs" />
+    <Compile Include="Migrations\201706061147587_ss12.Designer.cs">
+      <DependentUpon>201706061147587_ss12.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706061252546_ss121.cs" />
+    <Compile Include="Migrations\201706061252546_ss121.Designer.cs">
+      <DependentUpon>201706061252546_ss121.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ColumnRepository.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Repositories\EFUnitOfWork.cs" />
+    <Compile Include="Repositories\FormatRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\PortfolioRepository.cs" />
     <Compile Include="Repositories\PositionRepository.cs" />
@@ -210,6 +223,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706051403085_s3.resx">
       <DependentUpon>201706051403085_s3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706061130267_ss1.resx">
+      <DependentUpon>201706061130267_ss1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706061147587_ss12.resx">
+      <DependentUpon>201706061147587_ss12.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706061252546_ss121.resx">
+      <DependentUpon>201706061252546_ss121.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
