--- a/ClassLibrary1/BLL/BLL.csproj
+++ b/ClassLibrary1/BLL/BLL.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Interfaces\ICustomerService.cs" />
     <Compile Include="Interfaces\IPortfolioService.cs" />
     <Compile Include="Interfaces\IPositionService.cs" />
+    <Compile Include="Interfaces\IProfileService.cs" />
     <Compile Include="Interfaces\ISymbolViewService.cs" />
     <Compile Include="Interfaces\ITradeSybolService.cs" />
     <Compile Include="Interfaces\IUserService.cs" />
@@ -111,6 +112,7 @@
     <Compile Include="Services\CustomerService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\PositionService.cs" />
+    <Compile Include="Services\ProfileService.cs" />
     <Compile Include="Services\SymbolViewService.cs" />
     <Compile Include="Services\TradeSybolService.cs" />
     <Compile Include="Services\UserService.cs" />
