--- a/ClassLibrary1/UnitTests/UnitTests.csproj
+++ b/ClassLibrary1/UnitTests/UnitTests.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\TradeSybolTests.cs" />
     <Compile Include="Tests\TradeSymbolTests.cs" />
+    <Compile Include="Tests\ViewTemplateColumnTests.cs" />
     <Compile Include="Tests\ViewTemplateTests.cs" />
     <Compile Include="Tests\ViewTests.cs" />
     <Compile Include="Tests\UserTests.cs" />
