Complete Check access in all use controller

--- a/ClassLibrary1/WebApi/WebApi.csproj
+++ b/ClassLibrary1/WebApi/WebApi.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Controllers\PositionController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Controllers\ViewController.cs" />
+    <Compile Include="Controllers\ViewTemplateColumnController.cs" />
     <Compile Include="Controllers\ViewTemplateController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
