Make cool chart

--- a/ClassLibrary1/PL/Web.config
+++ b/ClassLibrary1/PL/Web.config
@@ -43,7 +43,11 @@
     <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules>
   <httpHandlers>
             <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers></system.web>
+        </httpHandlers><pages>
+  <controls>
+    <add tagPrefix="highcharts" namespace="Highcharts.UI" assembly="Highcharts" />    
+   </controls>      
+</pages></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
